syntax="proto3";

option csharp_namespace = "Remote.CustomerService";

import "google/protobuf/timestamp.proto";

message GrpcCustomer {
	int32 id = 1;
	string first_name = 2;
	string last_name = 3;
	string company_name = 4;
	bool active = 5;
	google.protobuf.Timestamp created_at = 6;
	google.protobuf.Timestamp updated_at = 7;
}

message Request{
	int32 id = 1;
}

message CustomerRequest{
	GrpcCustomer customer = 1;
}

message Response{
	bool success = 1;
	int32 status_code = 2;
	string status_message = 3;
}

message GetResponse {
	GrpcCustomer customer = 1;
}

message ListResponse{
	repeated GrpcCustomer customer = 1;
}

service CustomerService
{
	rpc Get(Request) returns (GetResponse);
	rpc List(CustomerRequest) returns (ListResponse);
	rpc Create(CustomerRequest) returns (Response);
	rpc Update(CustomerRequest) returns (Response);
	rpc Activate(Request) returns (Response);
	rpc Deactivate(Request) returns (Response);
}