syntax="proto3";

option csharp_namespace = "Remote.OrderService";

import "google/protobuf/timestamp.proto";

message Order {
	int32 id = 1;
	int32 customer_id = 2;
	repeated OrderLine items = 3;
}

message OrderLine {
	int32 item_id = 1;
	string name = 2;
	string description = 3;
	double price = 4;
	double quantity = 5;
	double discount_percent = 6;
}

message OrderRequest {
	repeated int32 order_ids = 1;
	repeated int32 customer_ids = 2;
}

message ListResponse {

}

service OrderService {
	rpc List(OrderRequest) returns (ListResponse);
}
